# cmd/api/api.go
@@ -8,9 +8,9 @@ import (
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	"github.com/nati3514/Social/docs"
 	"github.com/nati3514/Social/internal/store"
 	httpSwagger "github.com/swaggo/http-swagger"
-	"github.com/nati3514/Social/docs"
 )
 
 type application struct {
@@ -19,11 +19,11 @@ type application struct {
 }
 
 type config struct {
-	addr string
-	db   dbConfig
-	env  string
+	addr   string
+	db     dbConfig
+	env    string
 	apiURL string
-	mail mailConfig
+	mail   mailConfig
 }
 type mailConfig struct {
 	exp time.Duration
@@ -72,10 +72,11 @@ func (app *application) mount() http.Handler {
 				r.Get("/feed", app.getUserFeedHandler)
 			})
 
-			// Public routes
-			r.Route("/authentication", func(r chi.Router) {
-				r.Post("/user", app.registerUserHandler)
-			})
+		})
+
+		// Public routes
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
 		})
 	})
 	return r
@@ -83,9 +84,9 @@ func (app *application) mount() http.Handler {
 
 func (app *application) run(mux http.Handler) error {
 	// Docs
-	 docs.SwaggerInfo.Version = version
-	 docs.SwaggerInfo.Host = app.config.apiURL
-	 docs.SwaggerInfo.BasePath = "/v1"
+	docs.SwaggerInfo.Version = version
+	docs.SwaggerInfo.Host = app.config.apiURL
+	docs.SwaggerInfo.BasePath = "/v1"
 	srv := &http.Server{
 		Addr:         app.config.addr,
 		Handler:      mux,
