# cmd/api/auth.go
@@ -8,7 +8,6 @@ import (
 	"github.com/google/uuid"
 
 	"github.com/nati3514/Social/internal/store"
-	"golang.org/x/crypto/bcrypt"
 )
 
 type RegisterUserPayload struct {
@@ -23,11 +22,11 @@ type RegisterUserPayload struct {
 // @Tags Authentication
 // @Accept json
 // @Produce json
-// @Param payload body map[string]string true "Username and password"
+// @Param payload body RegisterUserPayload true "User registration details"
 // @Success 201 {object} map[string]string
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /users/authentication/user [post]
+// @Router /authentication/user [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
 	if err := readJSON(w, r, &payload); err != nil {
@@ -35,17 +34,15 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	// hash the user password
-	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(payload.Password), bcrypt.DefaultCost)
-	if err != nil {
-		app.internalServerError(w, r, err)
-		return
-	}
-
 	user := &store.User{
 		Username: payload.Username,
 		Email:    payload.Email,
-		Password: string(hashedPassword),
+	}
+
+	// Set the password using the password struct's Set method
+	if err := user.Password.Set(payload.Password); err != nil {
+		app.internalServerError(w, r, err)
+		return
 	}
 
 	ctx := r.Context()
@@ -57,7 +54,7 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 	hashToken := hex.EncodeToString(hash[:])
 
 	// store the user
-	err = app.store.Users.CreateAndInvite(ctx, user, hashToken, app.config.mail.exp)
+	err := app.store.Users.CreateAndInvite(ctx, user, hashToken, app.config.mail.exp)
 	if err != nil {
 		switch err {
 		case store.ErrDuplicateEmail:
